This version Fixes the Followin problems and Features : 1. Added About US page 2. Created the About Us overflow menu functionality 3. Added Error message for user login failure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AboutUs" />
         <activity android:name=".Home" />
         <activity android:name=".Ingredient_Categories" />
         <activity android:name=".Introduction" />
