--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
