Add the Ingredients List activity, started via search function in Home activity
The Home activity now has a "Search ingredients" field and an "Add" button.
The search field is an EditText widget with an Add button. When pressed, the Ingredients List activity is started,
and the search query is (for now) appended to a TextView widget in that activity.

The Ingredients List category has a Find Recipe button (no functionality yet) and a Clear List button.
The Clear List button clears the TextView containing ingredients entered by the user.

* Added Up navigation to toolbar on most Activities
* Removed Search button from all toolbars

The toolbar search button is (temporarily) removed because its implementation is currently too complicated and redundant.
For the sake of simplicity, focus is placed on the singular search function via the Home and Ingredients List activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,76 +22,72 @@
             </intent-filter>
         </activity>
 
-        <!-- The searchable activity that shows search results -->
-        <activity android:name=".SearchableActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
+        <!-- Shows the list of ingredients entered by the user -->
+        <activity
+            android:name=".IngredientsList"
+            android:label="Ingredients List"
+            android:launchMode="singleTop"
+            android:parentActivityName=".Home">
+            <!-- launchMode affects how instances of activities are created
+            and affects the animation when the Up button is pressed -->
+            <!-- parentActivityName sets the parent activity of this activity for Up navigation -->
+            <!-- This meta-data tag sets the parent activity for older Android versions -->
             <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
-        <activity android:name=".Home">
-
-            <!-- Enable the search dialog to send searches to SearchableActivity -->
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+        <activity
+            android:name=".Home"
+            android:launchMode="singleTop">
         </activity>
         <activity android:name=".Introduction">
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
         </activity>
         <activity
             android:name=".AboutUs"
             android:label="About Us">
             <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
         <activity
             android:name=".Ingredient_Categories"
-            android:label="Ingredients Categories">
+            android:label="Ingredients Categories"
+            android:launchMode="singleTop">
             <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
         <activity
             android:name=".MeatScroll"
             android:label="Meat &amp; Seafood">
             <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Ingredient_Categories" />
         </activity>
         <activity
             android:name=".PersonalRecipe"
             android:label="Add Recipe">
             <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
         <activity
             android:name=".SavedRecipe"
             android:label="Saved Recipes">
             <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
         <activity
             android:name=".SavedIngredients"
             android:label="Saved Ingredients">
             <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
         <activity
             android:name=".Admin"
             android:label="Admin">
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchableActivity" />
         </activity>
     </application>
 
