--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vincentzhu.testapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_label"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <!-- The login activity -->
         <activity android:name=".LoginActivity" />
@@ -24,8 +27,8 @@
 
         <!-- Shows the list of ingredients entered by the user -->
         <activity
-            android:name=".IngredientsList"
-            android:label="Ingredients List"
+            android:name=".IngredientList"
+            android:label="Ingredient List"
             android:launchMode="singleTop"
             android:parentActivityName=".Home">
 
@@ -41,8 +44,8 @@
         </activity>
         <activity
             android:name=".Home"
-            android:launchMode="singleTop"></activity>
-        <activity android:name=".Introduction"></activity>
+            android:launchMode="singleTop" />
+        <activity android:name=".Introduction" />
         <activity
             android:name=".AboutUs"
             android:label="About Us">
@@ -88,11 +91,22 @@
         </activity>
         <activity
             android:name=".Admin"
-            android:label="Admin"></activity>
-        <activity android:name=".PersonalIngredient"></activity>
+            android:label="Admin" />
+        <activity android:name=".PersonalIngredient" />
+        <activity
+            android:name=".RecipeSearch"
+            android:label="Recipe Search">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
+        </activity>
+        <activity
+            android:name=".SearchResults"
+            android:label="Search Results">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".RecipeSearch" />
+        </activity>
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
