Display cuisines & types as clickable ListView items
* Created BaseActivity abstract class for regular activities to extend.
This eliminates many chunks of code repeated in every activity and handles them all in a single abstract superclass.
This code includes Firebase authentication checking and toolbar/overflow menu creation.

NOTE: The onCreate() method of activities that subclass the BaseActivity abstract class must call
setContentView() BEFORE super.onCreate() in order to avoid accessing a null pointer reference and crashing the app.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,7 +122,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Home" />
         </activity>
-        <activity android:name=".RecipePage"></activity>
+        <activity android:name=".RecipePage">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".Home" />
+        </activity>
     </application>
 
 </manifest>
