--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:palette-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -34,6 +33,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.0.4'
     compile 'com.firebaseui:firebase-ui-storage:2.2.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/com.sun.jersey.jersey-core-1.4.0.jar')
 }
 
 
