Added password reset feature under LoginActivity, checks for valid user email in database or empty input

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,10 +123,11 @@
                 android:value=".Home" />
         </activity>
         <activity android:name=".RecipePage">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".Home" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
         </activity>
+        <activity android:name=".ResetPassword"></activity>
     </application>
 
 </manifest>
