PersonalRecipe UI (to add personal recipes) more friendly to the user.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,8 @@
         </activity>
         <activity
             android:name=".PersonalRecipe"
-            android:label="Add Recipe">
+            android:label="Add Recipe"
+            android:windowSoftInputMode="stateVisible|adjustNothing"> <!-- show keyboard -->>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Home" />
