--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/com.sun.jersey.jersey-core-1.4.0.jar')
+    compile files('libs/commons-text-1.1.jar')
+    compile files('libs/commons-lang3-3.5.jar')
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:palette-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -35,6 +38,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-storage:2.2.0'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
