Add Filter Dialog front-end to SearchResults
* Added FilterResultsDialogFragment.java to handle creation of filter dialog
* Added layout_filter_dialog.xml as custom layout for filter dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:label="Ingredient List"
             android:launchMode="singleTop"
             android:parentActivityName=".Home"
-            android:windowSoftInputMode="stateVisible|adjustNothing"> <!-- show keyboard -->
+            android:windowSoftInputMode="adjustPan|stateVisible"> <!-- show keyboard -->
             >
 
             <!--
