- Redesigned UI for Add Recipe - Changes made to Add Recipe Java Class - Created Favorites page - Stoped Auto lunch keyboard on Saved Recipe and Ingredients - Changed the menu color on Saved Recipe and Ingredients - Other tweaks and changes to make the UI more user friendly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,6 +132,7 @@
         </activity>
         <activity android:name=".ResetPassword" />
         <activity android:name=".IngredientPage" />
+        <activity android:name=".Favorites" android:label="Favorites" />
     </application>
 
 </manifest>
