- Made changes in Admin UI - Connected the Favorites in home page - Removed Certain error messages from XML file - More Tweaks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <!-- The login activity -->
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginActivity"
+            android:label="@string/app_label" />
         <activity
             android:name=".login"
             android:label="@string/app_label">
