Changed the name of SearchByRecipeAttribute to SearchByAttribute to represent functionality for both ingredients and recipes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,7 +120,7 @@
                 android:value=".SearchByName" />
         </activity>
         <activity
-            android:name=".SearchByRecipeAttribute"
+            android:name=".SearchByAttribute"
             android:label="Search by Attribute">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
